# profi2022_master_solution

./: CMakeLists.txt  README.md  package.xml
launch/: solution.launch
scripts/: main.py  simple_move.py  tests.ipynb
scripts/profi/camera/: camera.py  mapping_behavour.py  socks_behaviours.py  tracking_behaviour.py
scripts/profi/controllers/: visual_controller.py
scripts/profi/decision_making/: base_decision_maker.py  closes_sock_decision_maker.py  closest_sock_decision_maker.py
scripts/profi/map_builders/: map_builders.py
scripts/profi/path_planners/: a_star.py  base_planner.py  rrt.py
scripts/profi/path_smoothers/: base_smoother.py  short_cut_smoother.py
scripts/profi/robot/: base_robot.py  simple_move.py
src/: simple_move.cpp
